# Incompact3d

./: .dir-locals.el  .gitignore  .readthedocs.yaml  .travis.yml  BC-Channel-flow.f90  BC-Channel-flow.prm  BC-Cylinder.f90  BC-Cylinder.prm  BC-Lock-exchange.f90  BC-Lock-exchange.prm  BC-Periodic-hill.f90  BC-Periodic-hill.prm  BC-TGV.f90  BC-TGV.prm  BC-dbg-schemes.prm  CITATION.cff  CMakeLists.txt  CONTRIBUTORS  Changelog  INSTALL.md  INSTALL_CMAKE.md  LICENSE  Makefile  Makefile.orig  README.md  XCOMP3D.STANDARD  convdiff.f90  decomp_2d.f90  derive.f90  factor.f90  fft_common.f90  fft_common_3d.f90  fft_fftw3.f90  fft_generic.f90  fft_mkl.f90  forces.f90  glassman.f90  halo.f90  halo_common.f90  incompact3d.f90  (+26 more)
decomp2d/: CMakeLists.txt  LICENSE  alloc.f90  alloc.inc  decomp_2d.f90  decomp_2d_constants.f90  decomp_2d_cumpi.f90  decomp_2d_init_fin.f90  decomp_2d_mpi.f90  decomp_2d_nccl.f90  factor.f90  factor.inc  fft_common.f90  fft_common.inc  fft_common_3d.f90  fft_common_3d.inc  fft_cufft.f90  fft_ffte.f90  fft_fftw3.f90  fft_fftw3_f03.f90  fft_generic.f90  fft_log.f90  fft_mkl.f90  glassman.f90  halo.f90  halo.inc  halo_common.f90  halo_common.inc  io.f90  io_read_inflow.f90  io_read_one.inc  io_read_plane.inc  io_read_var.inc  io_write_every.inc  io_write_one.inc  io_write_outflow.f90  io_write_plane.inc  io_write_var.inc  log.f90  mem_merge.f90  (+11 more)
decomp2d/python/: .f2py_f2cmap  .gitignore  2decomp4py.f90  Makefile  setup.py
examples/: CMakeLists.txt  adios2_config.xml  post.prm
examples/2D-hill/: input.i3d
examples/ABL/: CMakeLists.txt  input_convective.i3d  input_convective_test.i3d  input_neutral.i3d  input_neutral_test.i3d  input_stable.i3d  input_stable_test.i3d
examples/ABL-Atmospheric-Boundary-Layer/: input_neutral_test.i3d
examples/ABL-old/: CMakeLists.txt  adios2_config.xml  input_convective.i3d  input_convective_test.i3d  input_neutral.i3d  input_neutral_test.i3d  input_stable.i3d  input_stable_test.i3d
examples/Cavity/: CMakeLists.txt  input.i3d  input_test.i3d  probes.prm  spod.py
examples/Channel/: CMakeLists.txt  input_test_x.i3d  input_test_z.i3d  stretching_parameter_channel.f90
examples/Channel-Flow/: BC-Channel-flow.prm  CMakeLists.txt  input.i3d  input_DNS_Re180_LR_explicittime.i3d  input_WALE_LES.i3d  input_test.i3d  input_test_x.i3d  input_test_z.i3d  plot.py  probes.prm  run.sh
examples/Channel_FPM/: input.i3d
examples/Cylinder/: BC-Cylinder.prm  CMakeLists.txt  Lift_Drag.py  adios2_config.xml  forces.dat0001000  fort.38  input.i3d  input.i3d.orig  input_3dsim.i3d  input_DNS300_LR.i3d  input_DNS300_LR_2D.i3d  input_DNS300_LR_MOVING.i3d  input_test.i3d  input_test_moving.i3d  kmean.dat0001000  paraview_incompact3d.f90  plot.py  pmean.dat0001000  restart-forces0001000  restart0001000  restart0001000.info  umean.dat0001000  uumean.dat0001000  uvmean.dat0001000  uwmean.dat0001000  vmean.dat0001000  vvmean.dat0001000  vwmean.dat0001000  wmean.dat0001000  wwmean.dat0001000
examples/Cylinder-wake/: CMakeLists.txt  input_3Dforce.i3d  input_DNS300_LR.i3d  input_DNS300_LR_2D.i3d  input_DNS300_LR_MOVING.i3d  input_test.i3d  input_test_moving.i3d
examples/Cylinder_wake/: input_DNS300_LR.i3d  input_DNS300_LR_MOVING.i3d  input_test_moving.i3d
examples/Dbg-schemes/: BC-dbg-schemes.prm  input.i3d  plot_outputs.py  schemes_PV1110033  schemes_x1000033  schemes_x1220033  schemes_xPV1000033  schemes_xPV1110033  schemes_xST1110033  schemes_xVP1000033  schemes_xVP1110033  schemes_y1110033  schemes_z1120033  schemes_z1210033  test  test1
examples/Gravity-current/: CMakeLists.txt  input.i3d  input_test.i3d
examples/Jet/: input.i3d
examples/Lock-exchange/: BC-Lock-exchange.prm  CMakeLists.txt  input.i3d  input_test.i3d
examples/MHD/: CMakeLists.txt  input_mhdchan.i2d  input_mhdchan.i3d  input_mhdchan_test.i3d  input_otv.i2d  input_otv.i3d  input_otv_test.i3d
examples/Mixing-layer/: CMakeLists.txt  input.i3d  input_2D_LR_periodic.i3d  input_test.i3d
examples/Moving_Cylinder/: input.i3d
examples/NREL-5MW/: NREL-5MW.i3d  NREL-5MW.pprc  NREL-5MW.turb
examples/OTV-Ozage-Tang-vortex-2D/: CMakeLists.txt  input_ot.i2d  input_test.i3d
examples/Ozage-Tang-Vortex-2D/: CMakeLists.txt
examples/Particle-Tracking/: CMakeLists.txt  input_channel_particles.i3d  input_tgv_particles.i3d
examples/Periodic-hill/: CMakeLists.txt  input.i3d  paraview_incompact3d.f90
examples/Pipe-Flow/: CMakeLists.txt  input.i3d  input_DNS_Re1000_LR.i3d  input_DNS_Re5300_HR.i3d  input_laminar.i3d
examples/Sandbox/: README.md
examples/Sphere/: README  aerof1  aerof1-0000050  gen.i3d  generate_initial_conditions.py  input.i3d  log_file  sphere.stl
examples/TBL-Turbulent-Boundary-Layer/: CMakeLists.txt  input.i3d  input_DNS_Re_theta1000.i3d  input_LR_PTBL.i3d  input_TTBL.i3d  input_test.i3d
examples/TGV/: CMakeLists.txt
examples/TGV-MOM/: 1_snapshots.xdmf  2_mean-planes-z.xdmf  BC-TGV.prm  input.i3d  probes.prm
examples/TGV-Taylor-Green-vortex/: CMakeLists.txt  input.i3d
examples/Taylor-Green-Vortex/: 2D-ncl00.i3d  2D-ncl11.i3d  2D-ncl11_imp2.i3d  CMakeLists.txt  adios2_config.xml  fort.42  input.i3d  input_2D.i3d  (+6 more)
post/: CMakeLists.txt  paraview_incompact3d.f90  paraview_incompact3d_vtk.f90
post_vtk/: CMakeLists.txt  Makefile  cmake_install.cmake  paraview_incompact3d_vtk.f90
src/: #incompact3d.f90#  #tools.f90#  BC-ABL.f90  BC-Cavity.f90  BC-Channel-flow.f90  BC-Cylinder.f90  BC-Ellipsoid.f90  BC-Generic  BC-Gravity-current.f90  BC-Jet.f90  BC-Lock-exchange.f90  BC-Mixing-layer.f90  BC-Periodic-hill.f90  BC-Pipe-flow.f90  BC-Sandbox.f90  BC-TBL.f90  BC-TGV.f90  BC-TTBL.f90  BC-Uniform.f90  BC-User.f90  BC-dbg-schemes.f90  BC-unified.f90  CMakeLists.txt  Case-ABL.f90  Case-Channel.f90  Case-Cylinder-wake.f90  Case-Generic.f90  Case-Gravity-current.f90  Case-Mixing-layer.f90  Case-PTBL.f90  Case-Periodic-hill.f90  Case-Pipe-flow.f90  Case-Sandbox.f90  Case-TBL.f90  Case-TGV.f90  Case-Uniform.f90  acl_beam.f90  acl_controller.f90  acl_elem.f90  acl_farm_controller.f90  (+55 more)
tests/: CMakeLists.txt  Makefile  README.md  build_with_make_and_run.x  run.sh
(+362 files in other folders)
