# ABL Convective
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective-old)
install(FILES input_convective_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective-old)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective-old)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/ABL-Convective-old")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_convective_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
# ABL Neutral
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral-old)
install(FILES input_neutral_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral-old)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral-old)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/ABL-Neutral-old")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_neutral_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
# ABL Stable
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable-old)
install(FILES input_stable_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable-old)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable-old)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
	set(case_dir "${test_dir}/ABL-Stable-old")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_stable_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
