# ABL Convective
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective)
install(FILES input_convective_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Convective)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/ABL-Convective")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_convective_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
# ABL Neutral
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral)
install(FILES input_neutral_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Neutral)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/ABL-Neutral")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_neutral_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
# ABL Stable
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable)
install(FILES input_stable_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/ABL-Stable)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
	set(case_dir "${test_dir}/ABL-Stable")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_stable_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
