install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Lock-exchange)
install(FILES input_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Lock-exchange)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Lock-exchange)
endif()
# If testing active add test for Lock-exchange case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/Lock-exchange")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
