install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Ozage-Tang-Vortex-2D)
install(FILES input_ot.i2d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Ozage-Tang-Vortex-2D)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Ozage-Tang-Vortex-2D)
endif()
# If testing active add test for 2D OTV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/OTV2D")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_ot.i2d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
