install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Taylor-Green-Vortex)
install(FILES input_test.i3d DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Taylor-Green-Vortex)
if(${USE_ADIOS2})
  install(FILES ../adios2_config.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/Taylor-Green-Vortex)
endif()
# If testing active add test for TGV case
if (${BUILD_TESTING})
  set(case_dir "${test_dir}/TGV")
  file(MAKE_DIRECTORY ${case_dir})
  file(COPY input_test.i3d DESTINATION ${case_dir})
  if(${USE_ADIOS2})
    file(COPY ../adios2_config.xml DESTINATION ${case_dir})
  endif()
endif()
